# ARTIST

./: .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  GUIDELINE.md  Jenkinsfile  Readme.md  conanfile.txt  coverage.sh  graph_info.json  sonar-project.properties  valgrind-output.txt
Cenpy/: CMakeLists.txt  ai-resume.py  resume.txt
Cenpy/component-tests/: CMakeLists.txt
Cenpy/component-tests/include/: OpenGLComponentTests.hpp
Cenpy/component-tests/src/graphic/: shaderPassTests-PassTests.gcno
Cenpy/component-tests/src/graphic/shader/: PassTests.cpp  ProgramTests.cpp  ShaderTests.cpp
Cenpy/game-tests/: CMakeLists.txt
Cenpy/game-tests/src/: GameTest.cpp
Cenpy/include/: EnumClass.hpp  WindowSubject.hpp  utils.hpp
Cenpy/include/common/: Serialization.hpp  macros.hpp
Cenpy/include/common/exception/: TraceableException.hpp
Cenpy/include/common/pattern/delegate/: Delegate.hpp
Cenpy/include/common/pattern/observer/: Observer.hpp  Subject.hpp  readme.md
Cenpy/include/common/persistence/preferences/: Preferences.hpp  PreferencesCommon.hpp  PropertyValidators.hpp  readme.md
Cenpy/include/common/persistence/preferences/serializer/: IniSerializer.hpp  JsonSerializer.hpp  Serializer.hpp  XmlSerializer.hpp  YamlSerializer.hpp
Cenpy/include/component/: Component.hpp
Cenpy/include/component/gui/desktop/: Resolution.hpp  WindowComponent.hpp
Cenpy/include/entity/: Entity.hpp
Cenpy/include/entity/gui/desktop/: Window.hpp
Cenpy/include/graphic/: Api.hpp
Cenpy/include/graphic/context/: AttributeContext.hpp  PassContext.hpp  PipelineContext.hpp  ProgramContext.hpp  ShaderContext.hpp  UniformContext.hpp
Cenpy/include/graphic/displayable/: Drawable.hpp  Drawable2D.hpp
Cenpy/include/graphic/opengl/context/: AttributeContext.hpp  PassContext.hpp  PipelineContext.hpp  ShaderContext.hpp  UniformContext.hpp
Cenpy/include/graphic/opengl/pipeline/component/attribute/: Binder.hpp  Setter.hpp  (+1 more)
Cenpy/include/graphic/opengl/profile/: Attribute.hpp  Classic.hpp  Pass.hpp  Pipeline.hpp  Shader.hpp  Uniform.hpp
Cenpy/include/graphic/opengl/validator/: AttributeConcept.hpp  PassConcept.hpp  PipelineConcept.hpp  ShaderConcept.hpp  UniformConcept.hpp  Validator.hpp
Cenpy/include/graphic/pipeline/: Attribute.hpp  Pass.hpp  Pipeline.hpp  Shader.hpp  Uniform.hpp
Cenpy/include/graphic/pipeline/component/attribute/: Binder.hpp  Setter.hpp  Unbinder.hpp
Cenpy/include/graphic/pipeline/component/pass/: AttributeReader.hpp  Freer.hpp  Loader.hpp  ShaderAttacher.hpp  UniformReader.hpp  User.hpp
Cenpy/include/graphic/pipeline/component/pipeline/: Resetter.hpp  User.hpp
Cenpy/include/graphic/pipeline/component/shader/: Freer.hpp  Loader.hpp  Reader.hpp
Cenpy/include/graphic/pipeline/component/uniform/: Setter.hpp
Cenpy/include/graphic/scene/: SceneGraph
Cenpy/include/graphic/shader/: Pass.hpp  Program.hpp  Shader.hpp  Uniform.hpp
Cenpy/include/graphic/shader/component/pass/: Freer.hpp  Loader.hpp  ShaderAttacher.hpp  UniformReader.hpp  User.hpp
Cenpy/include/graphic/shader/component/program/: Resetter.hpp  User.hpp
Cenpy/include/graphic/shader/component/shader/: Freer.hpp  Loader.hpp  Reader.hpp
Cenpy/include/graphic/shader/component/uniform/: Setter.hpp
Cenpy/include/graphic/texture/: Texture.hpp
Cenpy/include/graphic/validator/: ComponentConcept.hpp
Cenpy/include/manager/: GameManager.hpp
Cenpy/include/social/: cenpy-common.hpp
Cenpy/include/social/character/: Character.hpp  FavoriteSubject.hpp  MusicalTaste.hpp  Personality.hpp  PersonalityType.hpp  Religion.hpp  SocioEconomicGroup.hpp  Taste.hpp
Cenpy/include/social/character/factory/: CharacterFactory.hpp
Cenpy/include/social/interaction/: Conflict.hpp  Relationship.hpp  Resolution.hpp
Cenpy/include/social/interaction/factory/: ConflictFactory.hpp
Cenpy/include/system/: System.hpp
Cenpy/include/system/gui/desktop/: WindowSystem.hpp
Cenpy/mock/opengl/: glFunctionMock.hpp
Cenpy/src/common/persistence/preferences/: Preferences.cpp
Cenpy/src/common/persistence/preferences/serializer/: IniSerializer.cpp  JsonSerializer.cpp  Serializer.cpp  XmlSerializer.cpp  YamlSerializer.cpp
Cenpy/src/component/: Component.cpp
Cenpy/src/component/gui/desktop/: WindowComponent.cpp
Cenpy/src/entity/: Entity.cpp
Cenpy/src/entity/gui/desktop/: Window.cpp
Cenpy/src/graphic/shader/component/pass/: Freer.cpp  Loader.cpp  ShaderAttacher.cpp  UniformReader.cpp  User.cpp
Cenpy/src/manager/: GameManager.cpp
Cenpy/src/social/character/: Character.cpp  Personality.cpp  Taste.cpp
Cenpy/src/social/character/factory/: CharacterFactory.cpp
Cenpy/src/social/interaction/: Conflict.cpp  Relationship.cpp  Resolution.cpp
Cenpy/src/social/interaction/factory/: ConflictFactory.cpp
Cenpy/src/system/: System.cpp
Cenpy/src/system/gui/desktop/: WindowSystem.cpp
Cenpy/tests/: CMakeLists.txt
Cenpy/tests-common/include/: TestUtils.hpp
Cenpy/tests/include/: TestConfig.h
Cenpy/tests/mock/graphic/: MockApi.hpp
Cenpy/tests/mock/graphic/context/: MockAttributContext.hpp  MockPassContext.hpp  MockPipelineContext.hpp  MockProgramContext.hpp  MockShaderContext.hpp  MockUniformContext.hpp
Cenpy/tests/mock/graphic/opengl/context/: MockAttributeContext.hpp  MockPassContext.hpp  MockPipelineContext.hpp  MockShaderContext.hpp  MockUniformContext.hpp
Cenpy/tests/mock/graphic/pipeline/: MockAttribute.hpp  MockPass.hpp  MockShader.hpp  MockUniform.hpp
Cenpy/tests/mock/graphic/shader/: MockPass.hpp  MockShader.hpp  MockUniform.hpp
Cenpy/tests/mock/opengl/: glFunctionMock.hpp
Cenpy/tests/src/common/pattern/observer/: ObserverTest.cpp
Cenpy/tests/src/common/persistence/preferences/: PreferencesTest.cpp  PropertyValidatorsTest.cpp
Cenpy/tests/src/graphic/opengl/context/: ShaderContextTests.cpp
Cenpy/tests/src/graphic/pipeline/: AttributeTests.cpp  PassTests.cpp  PipelineTests.cpp  ShaderTests.cpp  UniformTests.cpp
Cenpy/tests/src/graphic/shader/: PassTests.cpp  ProgramTests.cpp  ShaderTests.cpp  UniformTests.cpp
Cenpy/tests/src/social/character/factory/: CharacterFactoryTest.cpp
(+94 files in other folders)
